ci: add production deployment config for Railway and Vercel
- Add PostgreSQL driver, scope H2 to test only
- Make active Spring profile env-var driven (SPRING_PROFILES_ACTIVE)
- Add application-prod.properties with Railway PostgreSQL config
- Make CORS origins configurable via CORS_ALLOWED_ORIGINS env var
- Add JVM container memory flags to Dockerfile for Railway free tier
- Add frontend CI job (type check + lint) to GitHub Actions
- Document VITE_API_URL in .env.example